# BLASTOISE

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  environment.yaml  meta.yaml  pyproject.toml  requirements.txt  setup.py
BKP/: strand_location_BKP.py
blastoise/: Dockerfile  __init__.py  blastoise.py  environment.yml  gui.py  main.py
blastoise/extra/: __init__.py  compare.py  coordinate_corrector.py  coordinate_corrector_functions.py  csvToGff.py  csv_to_gff.py  extra_functions.py  filterCoord.py  functions.py  joinStrands.py  main_functions.py  second_functions.py  sider_filter.py  sider_filter_functions.py  trueSiderFilter.py
blastoise/extra/outdated/: correct_coor_json_true_sider_test.py
blastoise/extra/utils/: __init__.py  coordinate_corrector_functions.py  csv_to_gff.py  extra_functions.py  sider_filter_functions.py
blastoise/modules/: __init__.py  aesthetics.py  bedops.py  blaster.py  compare.py  files_manager.py  filters.py  formats.py  genomic_ranges.py  identifiers.py  own_bedops.py  seq_extension.py  seq_identifier.py  seq_modifier.py  stopping.py  strand_location.py  strand_location_BKP.py
docs/: ES-PANAMA-SIDER_Repetitive_searcher_howto.md  conf.py  index.rst
docs/.ipynb_checkpoints/: conf-checkpoint.py  index-checkpoint.rst
docs/_build/html/: genindex.html  identifiers.html
docs/tutorials/: docker_post_processing_manual.md  docker_use_manual.md
notebooks/: compare_two_csv-pyranges.ipynb
webapp/: app.py
webapp/static/css/: styles.css
webapp/static/js/: progress.js
webapp/templates/: index.html  progress.html
