# =============================================================================
# BLASTOISE Python Project Configuration (pyproject.toml)
# =============================================================================
#
# This file is a modern Python project configuration file that defines how to
# build, package, and distribute the BLASTOISE software. It follows PEP 518
# and PEP 621 standards for Python project metadata and build system configuration.
#
# BLASTOISE (BLAST Oriented to the Identification of SIDER Elements) is a 
# bioinformatics tool for identifying SIDER repetitive elements in Leishmania 
# genomic data using BLAST-based approaches.
#
# This file contains:
# - Build system requirements and backend configuration
# - Project metadata (name, version, authors, description, etc.)
# - Dependencies specification (though BLASTOISE uses conda for dependencies)
# - Console scripts/entry points for command-line tools
# - Project URLs and development information
#
# For more information about pyproject.toml, see:
# - PEP 518: https://peps.python.org/pep-0518/
# - PEP 621: https://peps.python.org/pep-0621/
# - Packaging User Guide: https://packaging.python.org/en/latest/guides/writing-pyproject-toml/
# =============================================================================

# =============================================================================
# BUILD SYSTEM CONFIGURATION
# =============================================================================
[build-system]
# setuptools>=64 is needed for modern pyproject.toml support
# setuptools <81 to avoid pkg_resources warnings (deprecated versions in PyRagnes)
# wheel is needed to create wheel distributions (.whl files)
requires = ["setuptools <81", "wheel"]
build-backend = "setuptools.build_meta"  # Backend to build your package

# =============================================================================
# PROJECT METADATA
# =============================================================================
[project]
name = "blastoise"
version = "0.4.3"
authors = [
    {name = "R. Pacheco", email = "ronnyfph@gmail.com"}
]
description = "A Tool for SIDER Repetitive Sequence Discovery in Genomic Data"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
keywords = [
    "bioinformatics",
    "genomics",
    "repetitive-sequences",
    "blast",
    "siders",
    "leishmania",
    "sequence-analysis"
]

# Classifiers to categorize the package on PyPI
# Full list: https://pypi.org/classifiers/
classifiers = [
    # Development status
    "Development Status :: 4 - Beta",

    # Intended audience
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",

    # Operating systems
    "Operating System :: OS Independent",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",

    # Programming language versions
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",

    # Topic categories
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

# =============================================================================
# DEPENDENCIES
# =============================================================================
# Runtime dependencies (packages needed to run the code)
# Note: Non-Python dependency 'blast' (BLAST+) is managed by the conda environment, not via pip.
dependencies = [
    "biopython>=1.85",
    "joblib>=1.5.1",
    "pandas>=2.3.1",
    "pyranges>=0.1.4"
]

# =============================================================================
# PROJECT URLS
# =============================================================================
[project.urls]
Homepage = "https://github.com/rfpacheco"
Repository = "https://github.com/rfpacheco/BLASTOISE"
Issues = "https://github.com/rfpacheco/BLASTOISE/issues"
Documentation = "https://github.com/rfpacheco/BLASTOISE#readme"

# =============================================================================
# CONSOLE SCRIPTS (COMMAND LINE TOOLS)
# =============================================================================
# Executable commands that users can run from their terminal
[project.scripts]
# Main blastoise command: 'blastoise' will run the main() function from blastoise.main
blastoise = "blastoise.main:main"

# Additional tools to use as separate commands
blastoise-sider-filter = "blastoise.extra.sider_filter:main"

# =============================================================================
# SETUPTOOLS CONFIGURATION
# =============================================================================
[tool.setuptools]
# Explicitly specify which packages to include
packages = ["blastoise", "blastoise.modules", "blastoise.extra"]

# Alternative: use find directive to auto-discover blastoise package only
# [tool.setuptools.packages.find]
# include = ["blastoise*"]
# exclude = ["webapp*", "tests*"]
